--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -146,16 +146,16 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     import os
     import requests
     
-    reqUrl = "https://api.quantum-computing.ibm.com/runtime/jobs?limit=10&offset=0&exclude_params=true"
-    
-    headersList = {
+    req_url = "https://api.quantum-computing.ibm.com/runtime/jobs?limit=10&offset=0&exclude_params=true"
+
+    headers_list = {
       "Accept": "application/json",
       "Authorization": f"Bearer {os.environ['IQP_API_TOKEN']}"
     }
     
     payload = ""
     
-    response = requests.request("GET", reqUrl, data=payload,  headers=headersList)
+    response = requests.request("GET", req_url, data=payload,  headers=headers_list)
     
     print(response.json())
     ```
