--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -177,7 +177,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 
 #### Use a temporary access token
 
-1. Optionally obtain a temporary access token by supplying your API token. This is especially useful if you would like control over tokens, such as token invalidation.
+1. Optionally obtain a temporary access token by supplying your API token. This is especially useful if you would like control over tokens, such as token invalidation. Follow the same precautions previously mentioned about securely using the environment variable.
 
     ```python
     import requests
