--- a/docs/guides/qedma-qesem.ipynb
+++ b/docs/guides/qedma-qesem.ipynb
@@ -99,7 +99,10 @@
     "\n",
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionsCatalog(token=\"<YOUR_IQP_API_TOKEN>\")\n",
+    "# If you have not previously saved your credentials, follow instructions at\n",
+    "# https://docs.quantum.ibm.com/guides/functions\n",
+    "# to authenticate with your API token.\n",
+    "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "qesem_function = catalog.load(\"qedma/qesem\")"
    ]
