--- a/docs/guides/qunasys-quri-chemistry.ipynb
+++ b/docs/guides/qunasys-quri-chemistry.ipynb
@@ -58,6 +58,9 @@
    "source": [
     "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
+    "# If you have not previously saved your credentials, follow instructions at\n",
+    "# https://docs.quantum.ibm.com/guides/functions\n",
+    "# to authenticate with your API token.\n",
     "catalog = QiskitFunctionsCatalog()\n",
     "\n",
     "function = catalog.load(\"qunasys/quri-chemistry\")"
