Add pulse migration guide

--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -35,6 +35,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"note\">\n",
+    "\n",
+    "With the introduction of [fractional gates](./fractional-gates), pulse-level control on all IBM Quantum processors has been deprecated and will be removed on February 3, 2025. Additionally, the `qiskit.pulse` module has been deprecated as of the Qiskit SDK v1.3.0 and will be removed in Qiskit SDK v2.0.0. See the [migration guide](../migration-guides/pulse-migration) for more information.\n",
+    "\n",
+    "</Admonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "de13a71a-8d34-4988-a24f-abaaf8bf123a",
    "metadata": {},
    "source": [
