Increase timeout in serverless tests (#2402)
This notebook was regularly timing out in CI. This PR removes the manual
polling/timeout and just polls until the cell times out.

* In CI, it'll time out after 300s (an increase from 100s).
* In the fortnightly cron job, it'll wait until the action timesout at
6hrs.

If this is still causing problems, we can remove it from CI.

--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -432,10 +432,9 @@
     "    backend=\"ibm_sherbrooke\",\n",
     "    optimization_level=1,\n",
     ")\n",
-    "for cycle in range(20):\n",
+    "while True:\n",
     "    sleep(5)\n",
     "    status = job.status()\n",
-    "    print(f\"Cycle {cycle}: Status: {status}\")\n",
     "    if status not in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]:\n",
     "        raise Exception(\n",
     "            f\"Unexpected job status: '{status}'\\n\"\n",
@@ -443,10 +442,7 @@
     "            + job.logs()\n",
     "        )\n",
     "    if status == \"DONE\":\n",
-    "        break\n",
-    "status = job.status()\n",
-    "if status != \"DONE\":\n",
-    "    raise Exception(f\"Job did not complete in time (got status '{status}')\")"
+    "        break"
    ]
   },
   {
