--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -21,8 +21,8 @@ Keep up with the latest and greatest from Qiskit and IBM Quantum&trade;! Gathere
 The latest Qiskit version, 1.3, has just been released on [GitHub](https://github.com/Qiskit/qiskit/releases/tag/1.3.0) and [PyPI](https://pypi.org/project/qiskit/). The main changes include the following:
 
 We improved performance by porting additional key components to Rust, including:
-- Core data structures, like `DAGCircuit` or `Target`
-- Transpiler passes, including `BasisTranslator`, `CommutationAnalysis`, or `UnitarySynthesis`, making Qiskit around six times faster compared to v1.2.4
+- Core data structures, such as `DAGCircuit` or `Target`
+- Transpiler passes, including `BasisTranslator`, `CommutationAnalysis`, or `UnitarySynthesis`, making the transpilation around six times faster compared to v1.2.4
 - Circuit library and synthesis routines, such as `PauliEvolutionGate` or `n_local`
 
 The circuit library is now faster and allows for better high-level optimization, in particular with context-aware updates to `HighLevelSynthesis`.
