--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "26952e1f",
    "metadata": {},
    "outputs": [],
@@ -365,6 +365,7 @@
     "| session_id | `str`  | An existing Qiskit Runtime session ID  | `\"cw4r3je6f0t010870y3g\"` |\n",
     "| default_shots | `int`  | The number of shots to use for each circuit  | `2048` |\n",
     "| default_precision | `float`  | The target precision for expectation values to estimate for each circuit  | `0.015625` |\n",
+    "| job_tags | `list[str]` | A list of job tags | `[]`|\n",
     "\n",
     "### Estimator outputs\n",
     "| Name   | Type   | Description  | Example |\n",
@@ -648,6 +649,7 @@
     "|--------|----------|-----------------------|---------------------|\n",
     "| session_id | `str`  | An existing Qiskit Runtime session ID  | `\"cw4r3je6f0t010870y3g\"` |\n",
     "| default_shots | `int`  | The number of shots to use for each circuit  | `2048` |\n",
+    "| job_tags | `list[str]` | The list of desired job tags | `[]` |\n",
     "\n",
     "### Sampler outputs\n",
     "| Name   | Type                                   | Description                                                                               | Example                         |\n",
