--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -27,7 +27,7 @@ The latest Qiskit version, 1.3, has just been released on [GitHub](https://githu
 
 - The circuit library is now faster and allows for better high-level optimization, in particular with context-aware updates to `HighLevelSynthesis`.
 
-- Python 3.13 is now officially supported. Python 3.9 is now the *minimal* supported version.
+- Python 3.13 is now officially supported. Python 3.9 is now the *minimum* supported version.
 
 Explore the [v1.3 release notes](/api/qiskit/release-notes/1.3).
 
