--- a/docs/guides/primitives-examples.ipynb
+++ b/docs/guides/primitives-examples.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cd170c58-995d-4bee-9524-d6d5eb92427c",
    "metadata": {},
    "source": [
     "# Primitives examples\n",
@@ -24,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "25572659-9de6-4607-970a-561a85c5d723",
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +75,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e063555-bf71-4a28-b846-0a09aebe7413",
    "metadata": {},
    "source": [
     "### Run multiple experiments in a single job\n",
@@ -83,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "5ff0facb-eab8-46a6-aac2-253a687545ca",
    "metadata": {},
    "outputs": [
     {
@@ -104,15 +108,17 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp, random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator\n",
-    " \n",
+    "\n",
     "n_qubits = 10\n",
-    " \n",
+    "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)\n",
-    " \n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=n_qubits\n",
+    ")\n",
+    "\n",
     "rng = np.random.default_rng()\n",
     "mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]\n",
-    " \n",
+    "\n",
     "pubs = []\n",
     "circuits = [IQP(mat) for mat in mats]\n",
     "observables = [\n",
@@ -120,19 +126,19 @@
     "    SparsePauliOp(\"Y\" * 10, coeffs=0),\n",
     "    SparsePauliOp(\"Z\" * 10, coeffs=0),\n",
     "]\n",
-    " \n",
+    "\n",
     "# Get ISA circuits\n",
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
-    " \n",
+    "\n",
     "for qc, obs in zip(circuits, observables):\n",
     "    isa_circuit = pm.run(qc)\n",
     "    isa_obs = obs.apply_layout(isa_circuit.layout)\n",
     "    pubs.append((isa_circuit, isa_obs))\n",
-    " \n",
+    "\n",
     "estimator = Estimator(backend)\n",
     "job = estimator.run(pubs)\n",
     "job_result = job.result()\n",
-    " \n",
+    "\n",
     "for idx in range(len(pubs)):\n",
     "    pub_result = job_result[idx]\n",
     "    print(f\">>> Expectation values for PUB {idx}: {pub_result.data.evs}\")\n",
@@ -141,6 +147,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2d0ce38f-0847-4901-ad95-ca2220d2a525",
    "metadata": {},
    "source": [
     "### Run parameterized circuits\n",
@@ -151,6 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "1f35cd8c-490b-4bd9-8420-03132a830eb6",
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +242,9 @@
     "\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=1)\n",
     "chsh_isa_circuit = pm.run(chsh_circuit)\n",
-    "isa_observables = [operator.apply_layout(chsh_isa_circuit.layout) for operator in ops]\n",
+    "isa_observables = [\n",
+    "    operator.apply_layout(chsh_isa_circuit.layout) for operator in ops\n",
+    "]\n",
     "\n",
     "# Step 3: Execute using Qiskit primitives.\n",
     "\n",
@@ -253,6 +263,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b037f41-33bf-4323-a521-079de79a079f",
    "metadata": {},
    "source": [
     "### Use sessions and advanced options\n",
@@ -263,6 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8cd88de3-962b-42a2-8cff-75a295db8d71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,12 +282,18 @@
     "from qiskit.circuit.library import IQP\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp, random_hermitian\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService, Session, EstimatorV2 as Estimator\n",
+    "from qiskit_ibm_runtime import (\n",
+    "    QiskitRuntimeService,\n",
+    "    Session,\n",
+    "    EstimatorV2 as Estimator,\n",
+    ")\n",
     "\n",
     "n_qubits = 127\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=n_qubits\n",
+    ")\n",
     "\n",
     "rng = np.random.default_rng(1234)\n",
     "mat = np.real(random_hermitian(n_qubits, seed=rng))\n",
@@ -289,7 +307,9 @@
     "isa_circuit = pm.run(circuit)\n",
     "another_isa_circuit = pm.run(another_circuit)\n",
     "isa_observable = observable.apply_layout(isa_circuit.layout)\n",
-    "another_isa_observable = another_observable.apply_layout(another_isa_circuit.layout)\n",
+    "another_isa_observable = another_observable.apply_layout(\n",
+    "    another_isa_circuit.layout\n",
+    ")\n",
     "\n",
     "with Session(backend=backend) as session:\n",
     "    estimator = Estimator(mode=session)\n",
@@ -297,7 +317,9 @@
     "    estimator.options.resilience_level = 1\n",
     "\n",
     "    job = estimator.run([(isa_circuit, isa_observable)])\n",
-    "    another_job = estimator.run([(another_isa_circuit, another_isa_observable)])\n",
+    "    another_job = estimator.run(\n",
+    "        [(another_isa_circuit, another_isa_observable)]\n",
+    "    )\n",
     "    result = job.result()\n",
     "    another_result = another_job.result()\n",
     "\n",
@@ -312,6 +334,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ef0db31-79c9-48a4-b922-9f3af587db30",
    "metadata": {},
    "source": [
     "<span id=\"sampler-examples\"></span>\n",
@@ -327,6 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "476d8b40-4bdf-4dd7-8185-aa341de705be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +363,9 @@
     "n_qubits = 127\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=n_qubits\n",
+    ")\n",
     "\n",
     "mat = np.real(random_hermitian(n_qubits, seed=1234))\n",
     "circuit = IQP(mat)\n",
@@ -360,16 +386,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fa59e5b3-605c-49d9-8b29-ab91b8654530",
    "metadata": {},
    "source": [
     "### Run multiple experiments in a single job\n",
     "\n",
-    "Use Sampler to return the measurement outcome as bitstrings or counts of multiple circuits in one job.\n"
+    "Use Sampler to return the measurement outcome as bitstrings or counts of multiple circuits in one job."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7894db2c-2bfd-402b-a7f6-277fa3815592",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +410,9 @@
     "n_qubits = 127\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=n_qubits\n",
+    ")\n",
     "\n",
     "rng = np.random.default_rng()\n",
     "mats = [np.real(random_hermitian(n_qubits, seed=rng)) for _ in range(3)]\n",
@@ -403,15 +433,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2adafcc3-d549-4129-ace0-49f21536610c",
    "metadata": {},
    "source": [
     "### Run parameterized circuits\n",
     "\n",
-    "Run several experiments in a single job, leveraging parameter values to increase circuit reusability.\n"
+    "Run several experiments in a single job, leveraging parameter values to increase circuit reusability."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "704f4000-ebd0-4604-acb3-7ce8cd893878",
    "metadata": {},
    "source": [
     "import numpy as np\n",
@@ -451,6 +483,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1ce0269-5ef4-4fc1-8358-59e8fdbb4e64",
    "metadata": {},
    "source": [
     "### Use sessions and advanced options\n",
@@ -461,6 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4eb22428-3228-4292-a85f-b1417ea04b58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +508,9 @@
     "n_qubits = 127\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=n_qubits)\n",
+    "backend = service.least_busy(\n",
+    "    operational=True, simulator=False, min_num_qubits=n_qubits\n",
+    ")\n",
     "\n",
     "rng = np.random.default_rng(1234)\n",
     "mat = np.real(random_hermitian(n_qubits, seed=rng))\n",
@@ -502,6 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "15d186bb-e999-43d1-8b2a-3bd7681bdccf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +548,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "72f3d9c8-005e-435a-b8b3-fb2f89aee8d2",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -522,14 +560,14 @@
     "    - Try the [Submit pre-transpiled circuits](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives) tutorial.\n",
     "    - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).\n",
     "    - Understand the [Job limits](/guides/job-limits) when sending a job to an IBM&reg; QPU.\n",
-    "</Admonition>\n"
+    "</Admonition>"
    ]
   }
  ],
  "metadata": {
   "description": "Practical examples of using primitives in Qiskit Runtime.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -543,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3"
   },
   "title": "Primitives examples"
  },
