--- a/docs/guides/primitives-examples.ipynb
+++ b/docs/guides/primitives-examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd170c58-995d-4bee-9524-d6d5eb92427c",
+   "id": "0642f5cc-aa23-4cdc-b27a-1b2c060acc32",
    "metadata": {},
    "source": [
     "# Primitives examples\n",
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "25572659-9de6-4607-970a-561a85c5d723",
+   "id": "c72910c8-4cc1-42e9-9344-7fdc62110d68",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e063555-bf71-4a28-b846-0a09aebe7413",
+   "id": "b4c8428d-a0c6-4c36-834c-c6f6bea1de48",
    "metadata": {},
    "source": [
     "### Run multiple experiments in a single job\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ff0facb-eab8-46a6-aac2-253a687545ca",
+   "id": "682e53cc-03cc-4fc6-9f38-b4c8df7aee0a",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d0ce38f-0847-4901-ad95-ca2220d2a525",
+   "id": "5ebd582d-e954-4d01-b2fc-bf3951566a1e",
    "metadata": {},
    "source": [
     "### Run parameterized circuits\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1f35cd8c-490b-4bd9-8420-03132a830eb6",
+   "id": "ebe8bf33-bf0e-4c23-97d4-e0eb16e67b5d",
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b037f41-33bf-4323-a521-079de79a079f",
+   "id": "a804a4ef-4e2f-4de1-a60c-8c30931ab8a8",
    "metadata": {},
    "source": [
     "### Use sessions and advanced options\n",
@@ -273,10 +273,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8cd88de3-962b-42a2-8cff-75a295db8d71",
+   "execution_count": 8,
+   "id": "51110165-112f-45e5-8238-d992d2a40dfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " > Expectation value: 0.0275049115913556\n",
+      " > Metadata: {'shots': 4096, 'target_precision': 0.015625, 'circuit_metadata': {}, 'resilience': {}, 'num_randomizations': 32}\n",
+      " > Another Expectation value: -0.02028639618138425\n",
+      " > More Metadata: {'shots': 4096, 'target_precision': 0.015625, 'circuit_metadata': {}, 'resilience': {}, 'num_randomizations': 32}\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from qiskit.circuit.library import IQP\n",
@@ -288,7 +299,7 @@
     "    EstimatorV2 as Estimator,\n",
     ")\n",
     "\n",
-    "n_qubits = 127\n",
+    "n_qubits = 10\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
@@ -300,8 +311,8 @@
     "circuit = IQP(mat)\n",
     "mat = np.real(random_hermitian(n_qubits, seed=rng))\n",
     "another_circuit = IQP(mat)\n",
-    "observable = SparsePauliOp(\"X\" * n_qubits)\n",
-    "another_observable = SparsePauliOp(\"Y\" * n_qubits)\n",
+    "observable = SparsePauliOp(\"X\" * 10)\n",
+    "another_observable = SparsePauliOp(\"Y\" * 10)\n",
     "\n",
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
     "isa_circuit = pm.run(circuit)\n",
@@ -334,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ef0db31-79c9-48a4-b922-9f3af587db30",
+   "id": "54940977-62bf-43b9-bb15-7c6d81a7920f",
    "metadata": {},
    "source": [
     "<span id=\"sampler-examples\"></span>\n",
@@ -350,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "476d8b40-4bdf-4dd7-8185-aa341de705be",
+   "id": "ef00bdf6-1021-489c-9893-5e775acd8042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa59e5b3-605c-49d9-8b29-ab91b8654530",
+   "id": "e456d442-1bba-4d28-b30c-de5cfe261553",
    "metadata": {},
    "source": [
     "### Run multiple experiments in a single job\n",
@@ -397,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7894db2c-2bfd-402b-a7f6-277fa3815592",
+   "id": "c113dd9b-6b31-45b0-b9df-b89b98e22eb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2adafcc3-d549-4129-ace0-49f21536610c",
+   "id": "57d48218-8f13-4d07-a9a2-f68c9ad48fde",
    "metadata": {},
    "source": [
     "### Run parameterized circuits\n",
@@ -443,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "704f4000-ebd0-4604-acb3-7ce8cd893878",
+   "id": "efd3efd5-6dea-43eb-8059-aafd8e216acb",
    "metadata": {},
    "source": [
     "import numpy as np\n",
@@ -483,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ce0269-5ef4-4fc1-8358-59e8fdbb4e64",
+   "id": "6dce9ae0-43c3-4f0f-95aa-638601b9db42",
    "metadata": {},
    "source": [
     "### Use sessions and advanced options\n",
@@ -494,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eb22428-3228-4292-a85f-b1417ea04b58",
+   "id": "ee433544-dcab-4671-9ae1-5442b6ec4a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d186bb-e999-43d1-8b2a-3bd7681bdccf",
+   "id": "b6d50f7a-4ac1-4e70-9fa4-ad17ca5ae69a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72f3d9c8-005e-435a-b8b3-fb2f89aee8d2",
+   "id": "bb6442ba-e98f-44b8-bb01-02e8b3bebb44",
    "metadata": {},
    "source": [
     "## Next steps\n",
