Add mention of the `signals` module in dynamics

--- a/docs/migration-guides/pulse-migration.mdx
+++ b/docs/migration-guides/pulse-migration.mdx
@@ -21,7 +21,7 @@ backend = service.backend('ibm_torino', use_fractional_gates=True)
 
 ## Use Qiskit Dynamics
 
-While the `qiskit.pulse` module contained more functionality than executing single- and two-qubit rotations more efficiently, much of the control over device physics can be modeled using the [Qiskit Dynamics](https://qiskit-community.github.io/qiskit-dynamics/) package found in the Qiskit ecosystem. The Qiskit Dynamics package documentation includes a few helpful tutorials:
+The `qiskit.pulse` module contained much more functionality than just executing single and two-qubit rotations more efficiently. Much of the control over device physics can be modeled using the [Qiskit Dynamics](https://qiskit-community.github.io/qiskit-dynamics/) package found in the Qiskit Ecosystem. In particular, the package has its own analogous representation of many of the features provided by `qiskit.pulse` in the form of a `qiskit_dynamics.signals` module.  The documentation of this package contains a few tutorials which may be helpful:
 
 - [Simulating Qiskit Pulse Schedules](https://qiskit-community.github.io/qiskit-dynamics/tutorials/qiskit_pulse.html)
 - [Gradient optimization of a pulse sequence](https://qiskit-community.github.io/qiskit-dynamics/tutorials/optimizing_pulse_sequence.html)
