Add pulse migration guide (#2404)
Closes #1528

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>

--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -41,6 +41,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e315fbd1-f3a6-4eab-bb47-0ee1d52f3d84",
+   "metadata": {},
+   "source": [
+    "<Admonition type=\"note\">\n",
+    "\n",
+    "With the introduction of [fractional gates](/guides/fractional-gates), pulse-level control on all IBM Quantum&trade; processors has been deprecated and will be removed on 3 February 2025. Additionally, the `qiskit.pulse` module has been deprecated as of the Qiskit SDK v1.3.0 and will be removed in Qiskit SDK v2.0.0. See the [migration guide](../migration-guides/pulse-migration) for more information.\n",
+    "\n",
+    "</Admonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "de13a71a-8d34-4988-a24f-abaaf8bf123a",
    "metadata": {},
    "source": [
