Add Nazca to retired QPUs list
need to verify number of qubits

--- a/docs/guides/retired-qpus.mdx
+++ b/docs/guides/retired-qpus.mdx
@@ -15,6 +15,7 @@ The following IBM&reg; quantum processing units (QPUs) have been retired. For th
 
 | QPU name       | Qubit count | Retirement date (Year - month - day) |
 | ----------------- | ----------- | --------------- |
+| ibm_nazca         | **127**     | 2024-12-04      |
 | ibm_kyoto         | **127**     | 2024-09-05      |
 | ibm_osaka         | **127**     | 2024-08-13      |
 | ibm_cusco         | **127**     | 2024-08-13      |
