Apply suggestions from @abbycross
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/qiskit-addons-mpf-get-started.ipynb
+++ b/docs/guides/qiskit-addons-mpf-get-started.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Get started with Multi-product formulas (MPFs)\n",
     "\n",
-    "This guide demonstrates how to use the `qiskit-addon-mpf` package using the time evolution of an Ising model as an example. With this package, you can build a Multi-Product Formula (MPF) that can achieve lower Trotter error on observable measurements. The tools provided in the package allow you to determine the weights of a chosen MPF which can then be used to recombine the estimated expectation values from several time evolution circuits, each with a different number of Trotter steps.\n",
+    "This guide demonstrates how to use the `qiskit-addon-mpf` package, using the time evolution of an Ising model as an example. With this package, you can build a Multi-Product Formula (MPF) that can achieve lower Trotter error on observable measurements. The tools provided allow you to determine the weights of a chosen MPF, which can then be used to recombine the estimated expectation values from several time evolution circuits, each with a different number of Trotter steps.\n",
     "\n",
     "Begin by considering the Hamiltonian of an Ising model with 10 sites:\n",
     "\n",
@@ -86,7 +86,7 @@
    "id": "e4ab867e-9d04-49f5-891a-a01e0ddc98d7",
    "metadata": {},
    "source": [
-    "Next you prepare the MPF. The first choice to make is whether the coefficients will be static (i.e. time-independent) or dynamic (this tutorial uses a static MPF). The next choice to make is the set of $k_j$ values. This determines how many terms will be in the MPF, as well as how many Trotter steps each term uses to simulate the time evolution. The choice of $k_j$ values is heuristic, so you need to obtain your own set of \"good\" $k_j$ values. Read guidelines on finding a good set of values at the end of the [getting started page](/guides/qiskit-addons-mpf#determine-mpf-coefficients).\n",
+    "Next you prepare the MPF. The first choice to make is whether the coefficients will be static (time-independent) or dynamic; this tutorial uses a static MPF. The next choice to make is the set of $k_j$ values. This determines how many terms will be in the MPF, as well as how many Trotter steps each term uses to simulate the time evolution. The choice of $k_j$ values is heuristic, so you need to obtain your own set of \"good\" $k_j$ values. Read guidelines on finding a good set of values at the end of the [getting started page](/guides/qiskit-addons-mpf#determine-mpf-coefficients).\n",
     "\n",
     "Then, once the $k_j$ values are determined, the system of equations, $Ax=b$, to solve can be prepared. The matrix $A$ is also determined by the product formula to use. The choices here are its *order*, which we set to $2$, as well as whether or not the product formula should be *symmetric*, which we set to `True`. The code snippet below selects a total time to evolve the system, the $k_j$ values to use, and the set of equations to solve using the [`qiskit_addon_mpf.static.setup_static_lse`](../api/qiskit-addon-mpf/static) method."
    ]
@@ -120,7 +120,7 @@
    "id": "0e01627b-27b8-4308-9023-4b006d73c9a5",
    "metadata": {},
    "source": [
-    "Once the linear system of equations has been instantiated, it can be solved either exactly or through an approximate model using a sum of squares (or the Frobenius norm for dynamic coefficients, see the [API reference](../api/qiskit-addon-mpf/costs) for more information). The choice to use an approximate model typically arises when the norm of the coefficients for the chosen set of $k_j$ values is deemed too high and a different set of $k_j$ values cannot be chosen. This guide demonstrates both to compare the results."
+    "Once the linear system of equations has been instantiated, it can be solved either exactly or through an approximate model using a sum of squares (or the Frobenius norm for dynamic coefficients; see the [API reference](../api/qiskit-addon-mpf/costs) for more information). The choice to use an approximate model typically arises when the norm of the coefficients for the chosen set of $k_j$ values is deemed too high and a different set of $k_j$ values cannot be chosen. This guide demonstrates both to compare the results."
    ]
   },
   {
@@ -156,13 +156,13 @@
    "source": [
     "<Admonition type=\"note\">\n",
     "\n",
-    "The `LSE` object also possesses a `LSE.solve()` method which will solve the system of equations exactly. The reason that `setup_exact_problem()` is used in this guide is to demonstrate the interface provided by the other approximate methods.\n",
+    "The `LSE` object also possesses an `LSE.solve()` method, which will solve the system of equations exactly. The reason that `setup_exact_problem()` is used in this guide is to demonstrate the interface provided by the other approximate methods.\n",
     "\n",
     "</Admonition>\n",
     "\n",
     "## Set up and execute Trotter circuits\n",
     "\n",
-    "Now that the coefficients $x_j$ have been obtained, all that is left to do is to generate the time evolution circuits for the order and chosen set of steps $k_j$ of the MPF. Here we'll use the `qiskit-addon-utils` package to speed this process up."
+    "Now that the coefficients $x_j$ have been obtained, the last step is to generate the time evolution circuits for the order and chosen set of steps $k_j$ of the MPF. The `qiskit-addon-utils` package can accelerate this process."
    ]
   },
   {
