--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "This page shows you how to add a calibration to your circuit.\n",
     "\n",
-    "**Note:** Not all QPUs support pulse gates. See the [Compute resources page](https://quantum.ibm.com/services/resources) and look for the `Pulse gates` tag, which indicates that a QPU accepts pulse jobs."
+    "**Note:** Not all QPUs support pulse gates. To see which QPUs have pulse gate support, filter your view (click the funnel icon) on the [Compute resources page](https://quantum.ibm.com/services/resources) by checking the _Pulse gates_ box."
    ]
   },
   {
