--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -261,7 +261,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "bcaab4a6",
-   "metadata": {},
+   "metadata": {
+     "tags": [
+       "ignore-warning"
+     ]
+   },
    "outputs": [
     {
      "data": {
