acutally ignore warnings

--- a/docs/guides/defaults-and-configuration-options.ipynb
+++ b/docs/guides/defaults-and-configuration-options.ipynb
@@ -263,7 +263,7 @@
    "id": "bcaab4a6",
    "metadata": {
      "tags": [
-       "ignore-warning"
+       "ignore-warnings"
      ]
    },
    "outputs": [
