Address final review comments

--- a/docs/guides/qiskit-addons-mpf.ipynb
+++ b/docs/guides/qiskit-addons-mpf.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "## Determine MPF coefficients\n",
     "\n",
-    "The core functionality of the `qiskit-addon-mpf` package lies in determining the MPF coefficients $x_j(t)$ (which may be time-dependent). Obtaining each $x_j(t)$ amounts to solving a system of linear equations $Ax=b$ where $x$ is the vector of coefficients to be determined, $A$ is a matrix which depends on each of the $k_j$ and the product formula used $S$ (i.e. the approximation order), and $b$ is a vector of constraints. This system of equations can be solved either exactly or via an approximate model which minimizes the 1-norm of the coefficients. Additionally, the choice for each $k_j$ is a heuristic process, but can be bounded by the following constraints\n",
+    "The core functionality of the `qiskit-addon-mpf` package lies in determining the MPF coefficients $x_j(t)$ (which may be time-dependent). The process to obtain each $x_j(t)$ involves solving a system of linear equations $Ax=b$ where $x$ is the vector of coefficients to be determined, $A$ is a matrix that depends on each of the $k_j$ and the product formula used $S$ (as in, the approximation order and number of Trotter steps), and $b$ is a vector of constraints. This system of equations can be solved either exactly or with an approximate model that minimizes the 1-norm of the coefficients. Additionally, the choice for each $k_j$ is a heuristic process, but can be bounded by the following constraints:\n",
     "\n",
     "1. The **largest** $k_j$ value is bounded by the highest depth of circuit that can be reliably executed\n",
     "2. The **smallest** $k_j$ should satisfy $dt = t/k_j < 1$ since that is where the Trotter error is most well behaved\n",
