attempt to expand to full examples

--- a/docs/guides/specify-runtime-options.ipynb
+++ b/docs/guides/specify-runtime-options.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01031ad2-6b17-421c-b9c6-0424d5e9ce0c",
+   "id": "929fb1a3-e7d9-4904-9f73-540a1ed39be0",
    "metadata": {},
    "source": [
     "# Specify options\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2cb26278-06e8-4684-aeda-9d2310da619e",
+   "id": "05271104-11d9-4f2b-8291-cfedd67c9a2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a4ccd98-05ad-4a15-aee4-f312727df848",
+   "id": "1a65d50b-74cf-4944-a968-c169357aa7a1",
    "metadata": {},
    "source": [
     "#### Dictionary\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "31f2e0e1-5388-48ea-a761-4e301479c749",
+   "id": "14330c28-5789-4463-869c-7bfd700c935d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16f43cf1-c6c7-4460-9436-822fbf49f993",
+   "id": "aa2080bc-2859-4862-8458-d0ff0e0279eb",
    "metadata": {},
    "source": [
     "### Update options after initialization\n",
@@ -112,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4cfe6be0-fe11-45f1-886c-527f8dd7f4f7",
+   "execution_count": 4,
+   "id": "df0ad092-f547-446a-9c76-8b2221763bfc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "648b372a-a8b9-4032-964b-7380a45c9f41",
+   "id": "3b38e54b-a3d7-49cd-8678-eb61cad40adc",
    "metadata": {},
    "source": [
     "<span id=\"run-method\"></span>\n",
@@ -148,30 +148,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce9e59b0-542d-4c01-bd28-73bf21bcc199",
+   "id": "2954d3be-31bf-4c5c-8a2c-3d0f075b372d",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
+    "from qiskit.circuit.library import random_iqp\n",
+    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
+    "\n",
+    "circuit1 = random_iqp(3)\n",
+    "circuit2 = random_iqp(3)\n",
+    "\n",
+    "pass_manager = generate_preset_pass_manager(\n",
+    "    optimization_level=3, backend=backend\n",
+    ")\n",
+    "\n",
+    "transpiled1 = pass_manager.run(circuit1)\n",
+    "transpiled2 = pass_manager.run(circuit2)\n",
     "\n",
     "sampler = Sampler(mode=backend)\n",
     "# Default shots to use if not specified in run()\n",
     "sampler.options.default_shots = 500\n",
     "# Sample two circuits at 128 shots each.\n",
-    "sampler.run([circuit1, circuit2], shots=128)\n",
+    "sampler.run([transpiled1, transpiled2], shots=128)\n",
     "\n",
     "# Sample two circuits with different numbers of shots.\n",
-    "# 100 shots is used for circuit1 and 200 for circuit2.\n",
-    "sampler.run([(circuit1, None, 100), (circuit2, None, 200)])"
+    "# 100 shots is used for transpiled1 and 200 for transpiled.\n",
+    "sampler.run([(transpiled1, None, 100), (transpiled2, None, 200)])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c125c3a-05ee-463c-8b0a-4ae0ea05b0bf",
+   "id": "5c59daf1-1901-47ef-816e-b14a79940fcb",
    "metadata": {},
    "source": [
     "### Special cases\n",
@@ -187,15 +199,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ce97eb4-74af-410a-8cce-e562de7a519b",
+   "execution_count": 1,
+   "id": "1e748833-fdb8-4a26-a945-1dcd8e397284",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_runtime import EstimatorV2, QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend(\"ibm_auckland\")\n",
+    "backend = service.least_busy(operational=True, simulator=False)\n",
     "\n",
     "estimator = EstimatorV2(backend)\n",
     "\n",
@@ -206,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572c9e7c-d00b-4eca-8149-d53692123e25",
+   "id": "5288f420-978f-45b9-a08c-101b690092e0",
    "metadata": {},
    "source": [
     "#### Shots (Sampler only)\n",
@@ -271,15 +283,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e5cef15-ecbb-415a-8415-c5a124d0f596",
+   "id": "010ce2fc-e21c-40e9-bcdd-7e84e56c281a",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
+    "from qiskit.circuit.library import random_iqp\n",
+    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
+    "\n",
+    "circuit1 = random_iqp(3)\n",
+    "circuit2 = random_iqp(3)\n",
+    "\n",
+    "pass_manager = generate_preset_pass_manager(\n",
+    "    optimization_level=3, backend=backend\n",
+    ")\n",
+    "\n",
+    "transpiled1 = pass_manager.run(circuit1)\n",
+    "transpiled2 = pass_manager.run(circuit2)\n",
+    "\n",
     "\n",
     "# Setting shots during primitive initialization\n",
     "sampler = Sampler(mode=backend, options={\"default_shots\": 4096})\n",
@@ -294,12 +319,12 @@
     ")\n",
     "\n",
     "# Sample two circuits at 128 shots each.\n",
-    "sampler.run([circuit1, circuit2], shots=128)"
+    "sampler.run([transpiled1, transpiled2], shots=128)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8bf43541-0ff0-4cd4-9a1b-51413143cdf0",
+   "id": "28bc74f1-4904-4a3a-9dd7-a62d4a51db93",
    "metadata": {},
    "source": [
     "### Maximum execution time\n",
@@ -311,8 +336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2ef3d346-40f3-4937-86a6-32d264f18ffc",
+   "execution_count": 1,
+   "id": "54ad98f7-18ae-47e7-a1eb-2fca55e15f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b985be1-abea-4525-b5ba-0d1f510f9e35",
+   "id": "bd579ab5-f108-4845-a037-86ea49b44981",
    "metadata": {},
    "source": [
     "<span id=\"no-error-mitigation\"></span>\n",
@@ -344,8 +369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0a5612ed-e02f-4d68-8de7-641930d3486b",
+   "execution_count": 2,
+   "id": "f5147d44-112e-4620-8550-091b65b6793a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9435b2f7-38a4-4a62-95eb-c3161ab809c1",
+   "id": "249a7582-b189-48f0-9729-d164001afb28",
    "metadata": {},
    "source": [
     "## Next steps\n",
