Make notebooks runnable with nb-tester

--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -342,7 +342,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "4070e592",
-   "metadata": {},
+   "metadata": {
+     "tags": [
+       "raises-exception"
+     ]
+   },
    "outputs": [
     {
      "name": "stdout",
