--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -175,7 +175,9 @@
     "service = QiskitRuntimeService()\n",
     "backend_name = service.least_busy(operational=True).name\n",
     "\n",
-    "instance = \"<IQP_HUB/IQP_GROUP/IQP_PROJECT>\"\n",
+    "# Instance is a string of the form \"<IQP_HUB/IQP_GROUP/IQP_PROJECT>\".\n",
+    "# The following line gets the instance of the active QiskitRuntimeService account.\n",
+    "instance = service.active_account()[\"instance\"]\n",
     "\n",
     "pub = (qc, [observable])\n",
     "options = {\"default_precision\": 0.02}\n",
