--- a/docs/guides/specify-runtime-options.ipynb
+++ b/docs/guides/specify-runtime-options.ipynb
@@ -161,7 +161,9 @@
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "\n",
     "circuit1 = random_iqp(3)\n",
+    "circuit1.measure_all()\n",
     "circuit2 = random_iqp(3)\n",
+    "circuit2.measure_all()\n",
     "\n",
     "pass_manager = generate_preset_pass_manager(\n",
     "    optimization_level=3, backend=backend\n",
@@ -296,7 +298,9 @@
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "\n",
     "circuit1 = random_iqp(3)\n",
+    "circuit1.measure_all()\n",
     "circuit2 = random_iqp(3)\n",
+    "circuit2.measure_all()\n",
     "\n",
     "pass_manager = generate_preset_pass_manager(\n",
     "    optimization_level=3, backend=backend\n",
@@ -409,7 +413,6 @@
  ],
  "metadata": {
   "description": "Specify options when building with Qiskit Runtime primitives.",
-  "title": "Specify options",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -426,7 +429,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "Specify options"
  },
  "nbformat": 4,
  "nbformat_minor": 4
