Incorporate SQD feedback

--- a/docs/guides/qiskit-addons-sqd-get-started.ipynb
+++ b/docs/guides/qiskit-addons-sqd-get-started.ipynb
@@ -1826,12 +1826,14 @@
     "\n",
     "1. Use the `recover_configurations()` method to obtain a refined bitstring matrix and probability array based on the average orbital occupancy.\n",
     "1. Use the `postselect_and_subsample()` to collect batches of subsamples to diagonalize over.\n",
-    "1. Then use the batches of subsamples as arguments to the `solve_fermion()` method to obtain an approximation of the ground state."
+    "1. Then use the batches of subsamples as arguments to the `solve_fermion()` method to obtain an approximation of the ground state.\n",
+    "\n",
+    "One important note here is how to address the very first iteration of the configuration recovery loop. Here the average orbital occupancy is not yet available and so only the `postselect_and_subsample()` method is called. This removes any non-physical samples (samples with incorrect Hamming weight) before running the eigenstate solver, `solve_fermion()`. Afterwards, the average orbital occupation is calculated across all batches and used as input to the `recover_configurations()` method which flips individual bits probabilistically based on this average. (See Section **II-A** of the supplementary information in the [SQD paper](https://arxiv.org/abs/2405.05068) for more information.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a6d492b5-d86b-43cd-9171-4add0903fe84",
    "metadata": {},
    "outputs": [
@@ -1928,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "dcd4ed70-89a0-44f4-b4b0-6270bbeb0c13",
    "metadata": {},
    "outputs": [
@@ -1949,6 +1951,8 @@
     "# Data for energies plot\n",
     "n2_exact = -109.10288938\n",
     "x1 = range(ITERATIONS)\n",
+    "# Here we plot the smallest energy obtained across all batches for each iteration\n",
+    "#  of the configuration recovery loop.\n",
     "e_diff = [abs(np.min(energies) - n2_exact) for energies in energy_hist]\n",
     "yt1 = [1.0, 1e-1, 1e-2, 1e-3, 1e-4]\n",
     "\n",
