MPF Intro and getting started (#2367)
Closes #2109 and closes #2111

---------

Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/map-problem-to-circuits.mdx
+++ b/docs/guides/map-problem-to-circuits.mdx
@@ -49,3 +49,5 @@ The output of this step in a Qiskit pattern is normally a collection of circuits
   * [OpenQASM 3 and the Qiskit SDK](./interoperate-qiskit-qasm3)
   * [OpenQASM 3 feature table](./qasm-feature-table)
   * [OpenQASM 3.x live specification](https://openqasm.com/)
+* [MPF Qiskit Addon](/guides/qiskit-addons-mpf)
+  * [Get started with MPF](/guides/qiskit-addons-mpf-get-started)
